--- a/advanced.html
+++ b/advanced.html
@@ -1,21 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Search</title>
+    <title>Search advanced</title>
     <link rel="stylesheet" href="google.css" />
   </head>
   <body>
     <nav>
-      <ul class="navbar">
-        <li class="navbar-item"><a href="./index.html">Google Search</a></li>
-        <li class="navbar-item">
+      <ul>
+        <li>
+          <a href="./index.html">Google Search</a>
+        </li>
+        <li>
           <a href="./image.html">Google Image Search</a>
         </li>
       </ul>
     </nav>
+    <!--  -->
     <form action="https://www.google.com/search">
-      <input type="text" name="q" />
-      <input type="submit" value="Google Search" />
+      <img
+        src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c51f.png"
+        alt="google-logo"
+      />
+      <input
+        class="input"
+        type="text"
+        name="q"
+        placeholder="Search Google or type a URL"
+      />
+      <input type="hidden" name="tbm" value="isch" />
+      <div class="btn">
+        <input type="submit" value="Google Search" />
+        <input value="I’m Feeling Lucky" type="submit" />
+      </div>
     </form>
   </body>
 </html>
