--- a/index.html
+++ b/index.html
@@ -6,31 +6,31 @@
   </head>
   <body>
     <nav>
-      <ul class="navbar">
-        <li class="navbar-item">
+      <ul>
+        <li>
           <a href="./image.html">Google Image Search</a>
         </li>
-        <li class="navbar-item">
+        <li>
           <a href="./advanced.html">Google Advanced Search</a>
         </li>
       </ul>
     </nav>
-    <div class="center-div">
+    <!--  -->
+    <form action="https://www.google.com/search">
       <img
         src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c51f.png"
         alt="google-logo"
       />
-    </div>
-    <form action="https://www.google.com/search">
       <input
+        class="input"
         type="text"
         name="q"
         placeholder="Search Google or type a URL"
-        class="google-input"
       />
-      <input type="submit" value="Google Search" />
+      <div class="btn">
+        <input type="submit" value="Google Search" />
+        <input value="I’m Feeling Lucky" type="submit" />
+      </div>
     </form>
-
-    <input class="ifl-btn" value="I’m Feeling Lucky" type="submit" />
   </body>
 </html>
