--- a/image.html
+++ b/image.html
@@ -21,15 +21,10 @@
         src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c51f.png"
         alt="google-logo"
       />
-      <input
-        class="input"
-        type="text"
-        name="q"
-        placeholder="Search Google or type a URL"
-      />
+      <input class="input" type="text" name="q" placeholder="Search Google" />
       <input type="hidden" name="tbm" value="isch" />
       <div class="btn">
-        <input type="submit" value="Google Search" />
+        <input type="submit" value="Google Search Image" />
         <input value="I’m Feeling Lucky" type="submit" />
       </div>
     </form>
