--- a/index.html
+++ b/index.html
@@ -21,12 +21,7 @@
         src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c51f.png"
         alt="google-logo"
       />
-      <input
-        class="input"
-        type="text"
-        name="q"
-        placeholder="Search Google or type a URL"
-      />
+      <input class="input" type="text" name="q" placeholder="Search Google" />
       <div class="btn">
         <input type="submit" value="Google Search" />
         <input value="I’m Feeling Lucky" type="submit" />
