adding the I'M Feeling Lucky function

--- a/image.html
+++ b/image.html
@@ -21,11 +21,16 @@
         src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c51f.png"
         alt="google-logo"
       />
-      <input class="input" type="text" name="q" placeholder="Search Google" />
+      <input
+        class="input"
+        type="text"
+        name="q"
+        placeholder="Search Google Image"
+      />
       <input type="hidden" name="tbm" value="isch" />
       <div class="btn">
-        <input type="submit" value="Google Search Image" />
-        <input value="I’m Feeling Lucky" type="submit" />
+        <input type="submit" value="Google Search" />
+        <input value="I’m Feeling Lucky" type="submit" name="btnI" />
       </div>
     </form>
   </body>
