--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
         alt="google-logo"
       />
       <input class="input" type="text" name="q" placeholder="Search Google" />
+
       <div class="btn">
         <input type="submit" value="Google Search" />
-        <input value="I’m Feeling Lucky" type="submit" />
+        <input type="submit" value="I’m Feeling Lucky" name="btnI" />
       </div>
     </form>
   </body>
