--- a/image.html
+++ b/image.html
@@ -3,6 +3,13 @@
   <head>
     <title>Search Image</title>
     <link rel="stylesheet" href="google.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <nav>
@@ -21,16 +28,24 @@
         src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c51f.png"
         alt="google-logo"
       />
-      <input
-        class="input"
-        type="text"
-        name="q"
-        placeholder="Search Google Image"
-      />
+      <div class="search-bar">
+        <i class="fa-sharp fa-regular fa-magnifying-glass"></i>
+        <input
+          class="input"
+          type="text"
+          name="q"
+          placeholder="Search Google Image"
+        />
+      </div>
       <input type="hidden" name="tbm" value="isch" />
-      <div class="btn">
-        <input type="submit" value="Google Search" />
-        <input value="I’m Feeling Lucky" type="submit" name="btnI" />
+      <div class="btn-cont">
+        <input class="btn" type="submit" value="Google Search Image" />
+        <input
+          class="btn"
+          value="I’m Feeling Lucky"
+          type="submit"
+          name="btnI"
+        />
       </div>
     </form>
   </body>
